--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           <div class="col-md-4 col-sm-4 padding-right-30">
             <div class="product-thumbnails">
               <img class="img-thumbnail" src="assets/img/thumb/striker.jpg" alt="">
-              <a class="btn" href="#">read more +</a>
+              <a class="btn" href="waterblast-automation/striker-remote-shotgunning.html">read more +</a>
               <div class="caption">
                 <h4><a href="waterblast-automation/striker-remote-shotgunning.html">Striker SKR-100</a></h4>
                 <p>The industry's first portable remote shotgunning system</p>
@@ -182,8 +182,8 @@
           </div>
           <div class="col-md-4 col-sm-4 padding-right-30">
             <div class="product-thumbnails">
-              <img class="img-thumbnail" src="assets/img/thumb/abx-2l.jpg" alt="">
-              <a class="btn" href="#">read more +</a>
+              <img class="img-thumbnail" src="assets/img/thumb/abx-2l.jpg" alt="AutoBox ABX-2L">
+              <a class="btn" href="waterblast-automation/autobox-abx-2l.html">read more +</a>
               <div class="caption">
                 <h4><a href="waterblast-automation/autobox-abx-2l.html">AutoBox ABX-2L</a></h4>
                 <p>Automated flex-lancing of heat exchanger tubes</p>
@@ -192,10 +192,10 @@
           </div>
           <div class="col-md-4 col-sm-4 padding-right-30">
             <div class="product-thumbnails">
-              <img class="img-thumbnail" src="assets/img/thumb/abx-500.jpg" alt="">
-              <a class="btn" href="#">read more +</a>
+              <img class="img-thumbnail" src="assets/img/thumb/abx-500.jpg" alt="AutoBox ABX-500">
+              <a class="btn" href="waterblast-automation/autobox-abx-500.html">read more +</a>
               <div class="caption">
-                <h4><a href="#">AutoBox ABX-500</a></h4>
+                <h4><a href="waterblast-automation/autobox-abx-500.html">AutoBox ABX-500</a></h4>
                 <p>Hands-free hose handling for high pressure pipe cleaning</p>
               </div>
             </div>
@@ -206,28 +206,28 @@
         <div class="row margin-bottom-20">
           <div class="col-md-4 col-sm-4 padding-right-30">
             <div class="product-thumbnails">
-              <img class="img-thumbnail" src="assets/img/thumb/bundle-blaster.jpg" alt="">
-              <a class="btn" href="#">read more +</a>
+              <img class="img-thumbnail" src="assets/img/thumb/bundle-blaster.jpg" alt="Bundle Blaster">
+              <a class="btn" href="waterblast-automation/bundle-blaster.html">read more +</a>
               <div class="caption">
-                <h4><a href="#">Bundle Blaster</a></h4>
+                <h4><a href="waterblast-automation/bundle-blaster.html">Bundle Blaster</a></h4>
                 <p>Shell-side heat exchanger bundle cleaning</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-4 padding-right-30">
             <div class="product-thumbnails">
-              <img class="img-thumbnail" src="assets/img/thumb/blackhawk.jpg" alt="">
-              <a class="btn" href="#">read more +</a>
+              <img class="img-thumbnail" src="assets/img/thumb/blackhawk.jpg" alt="Blackhawk BHK-100">
+              <a class="btn" href="waterblast-automation/blackhawk-concrete-demo.html">read more +</a>
               <div class="caption">
-                <h4><a href="#">Blackhawk BHK-100</a></h4>
+                <h4><a href="waterblast-automation/blackhawk-concrete-demo.html">Blackhawk BHK-100</a></h4>
                 <p>Concrete hydrodemolition and scarification system</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-sm-4 padding-right-30">
             <div class="product-thumbnails">
-              <img class="img-thumbnail" src="assets/img/thumb/btc.jpg" alt="">
-              <a class="btn" href="#">read more +</a>
+              <img class="img-thumbnail" src="assets/img/thumb/btc.jpg" alt="Boiler Tube Cleaner">
+              <a class="btn" href="waterblast-automation/boiler-tube-cleaner.html">read more +</a>
               <div class="caption">
                 <h4><a href="#">Boiler Tube Cleaner</a></h4>
                 <p>Automated package boiler tube cleaning</p>
