--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -263,7 +263,7 @@
       <a href="#">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
     </div>
   </div>
-  
+  <!-- End Footer CTA -->
   
   <!-- Footer -->
   <footer>
