--- a/results-surface-prep.html
+++ b/results-surface-prep.html
@@ -77,7 +77,7 @@
   
   <section class="results container padding-tb-60">
     <div class="row">
-      <div class="col-sm-9 padding-right-60">
+      <div class="col-sm-7">
         
         <div class="media">
           <div class="media-left">
@@ -177,7 +177,7 @@
       </div>
       <!-- End results -->
       
-      <aside class="col-sm-3 padding-tb-30 padding-left-60">
+      <aside class="col-sm-3 col-sm-offset-2 right-sidebar">
         <h3>What are you cleaning?</h3>
         <ul class="list-unstyled">
           <li><a href="results-heat-exchangers.html">Heat Exchangers</a></li>
