--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -75,7 +75,7 @@
     </div>
   </div>
 
-  <section class="container padding-tb-30">
+  <section class="container padding-tb-30 margin-bottom-30">
     <div class="col-sm-7">
       <h1 class="thin grey spaced margin-bottom-30"><em>StoneAge Inc. is one of the world’s leading manufacturers of automated waterblast equipment and tooling for industrial companies and contractors worldwide.</em></h1>
       <p>The company was launched when co-founders John Wolgamott and Jerry Zink developed a new self-rotary nozzle from their garage, changing the way heat exchangers were cleaned in the early 1980s. Their passion for research and development bred a culture of product innovation at StoneAge where the commitment to designing new tools and equipment has improved the way the waterblasting industry works for over 35 years.</p>
@@ -101,17 +101,15 @@
       <li data-target="#wordCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#wordCarousel" data-slide-to="1"></li>
       <li data-target="#wordCarousel" data-slide-to="2"></li>
-      <li data-target="#wordCarousel" data-slide-to="3"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <div class="testimonial">
-          <p>"We recognize StoneAge as a long term business partner. 
-The products we purchase are of the highest specification from a technical, quality, and health &amp; safety perspective."</p>
-          <p class="attrib">- Andrew Dobson, Veolia</p>
-          <img src="assets/img/logo_veolia.png" alt="Veolia">
+          <p>"In 2015, NCTI allowed Evergreen Industrial Services to oversee our first fully automated hydro-blast turnaround.  Utilizing StoneAge automated equipment, Evergreen achieved the most proficient cleaning to date at an overall reduced cost and a much safer environment for hydro-blasting employees."</p>
+          <p class="attrib">- Brent Peveto, NCTI</p>
+          <img src="assets/img/logo_ncti.gif" alt="NCTI Nippon Chemical Texas">
         </div>
       </div>
       <div class="item">
@@ -126,13 +124,6 @@ The products we purchase are of the highest specification from a technical, qual
           <p>"StoneAge helped us get our equipment fleet 100% automated."</p>
           <p class="attrib">- Doug Mcgee, Evergreen Industrial Services</p>
           <img src="assets/img/logo_evergreen.png" alt="Evergreen Industrial Services">
-        </div>
-      </div>
-      <div class="item">
-        <div class="testimonial">
-          <p>"My customers are very happy. When we’re doing research and development along with StoneAge, they think it’s a big plus to have engineers that can get out in the field and work right along with us."</p>
-          <p class="attrib">- Richard Bombard, PSC</p>
-          <img src="assets/img/logo_psc.png" alt="PSC">
         </div>
       </div>
     </div>
@@ -171,8 +162,8 @@ The products we purchase are of the highest specification from a technical, qual
           <h3>About StoneAge</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="#">Our Story</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Careers</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="about-stoneage.html">Our Story</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="careers.html">Careers</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Press</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
