--- a/waterblast-automation/bundle-blaster.html
+++ b/waterblast-automation/bundle-blaster.html
@@ -357,8 +357,8 @@ The StoneAge Bundle Blaster is a powerful and affordable automated solution for 
           <h3>About StoneAge</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="#">Our Story</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Careers</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="about-stoneage.html">Our Story</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="careers.html">Careers</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Press</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
