--- a/waterblast-automation/rigid-lance-machine.html
+++ b/waterblast-automation/rigid-lance-machine.html
@@ -356,8 +356,8 @@ power than flex-lancing systems and increased safety by removing the operator fr
           <h3>About StoneAge</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="#">Our Story</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Careers</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="about-stoneage.html">Our Story</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="careers.html">Careers</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Press</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
