--- a/waterblast-automation/sm-air-large-tank-cleaner.html
+++ b/waterblast-automation/sm-air-large-tank-cleaner.html
@@ -324,8 +324,8 @@ used with a variety of head designs for many different applications</li>
           <h3>About StoneAge</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="#">Our Story</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Careers</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="about-stoneage.html">Our Story</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="careers.html">Careers</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Press</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
