--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -360,8 +360,8 @@ The Torus TR-200 is the industry’s most powerful 3-D tool. It is capable of de
           <h3>About StoneAge</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="#">Our Story</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Careers</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="about-stoneage.html">Our Story</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="careers.html">Careers</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Press</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
