--- a/careers.html
+++ b/careers.html
@@ -76,7 +76,7 @@
   </div>
   
   <section class="fluid-container">
-    <div class="padding-40-60">
+    <div class="container padding-40-60">
       <div class="row">
         <div class="col-sm-6">
         <h1 class="thin grey spaced margin-bottom-30"><em>StoneAge is 100% dedicated to customer service.</em></h1>
@@ -165,7 +165,7 @@
   </section>
   
   <section class="fluid-container">
-    <div class="padding-40-60">
+    <div class="container padding-40-60">
       <div class="row">
         <div class="col-sm-12">
           <h2>Living In Durango</h2>
