--- a/careers.html
+++ b/careers.html
@@ -114,7 +114,7 @@
           </ul>
         </div>
         <div class="col-sm-4 col-sm-offset-1">
-          <h2>To apply:</h2>
+          <h3>To apply:</h3>
           <p>Please send a cover letter and resume specific to each position you’re applying for to:</p>
           <p>StoneAge, Inc., Attention HR<br>
             PO Box 2907, Durango, CO 81302<br>
@@ -125,7 +125,7 @@
     </div>
   </section>
 
-  <section class="fluid-container padding-tb-30 margin-bottom-30 work-here">
+  <section class="fluid-container padding-tb-30 work-here">
     <div class="container">
       <div class="col-sm-6 work-here-description">
         <h2>Working at StoneAge</h2>
@@ -164,7 +164,7 @@
     </div>
   </section>
   
-  <section class="fluid-container">
+  <section class="fluid-container bg-lt-grey">
     <div class="container padding-40-60">
       <div class="row">
         <div class="col-sm-12">
