--- a/careers.html
+++ b/careers.html
@@ -102,14 +102,16 @@
         <div class="col-sm-6">
           <ul class="list-unstyled job-listings">
             <li>
-              <a href="#" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Mechanic – Houston Facility</h4>
-                <p>The Mechanic is responsible for the repair and maintenance of StoneAge rental equipment and customer owned products. This position reports to the local site Operations Manager.</p>
-              </a>
+              <a href="assets/pdf/jobs/Director-Finanace_IT_201512.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Director of Finance and Information Systems</h4></a>
+                <p>The Director of Finance and Information Systems oversees StoneAge’s accounting, financial, and IT/IS functions.</p>
             </li>
             <li>
-              <a href="#" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Machinist III</h4>
-                <p>Hiring full-time, experienced machinist to perform set up, production, and inspection of all machining and/or shop assembly jobs.</p>
-              </a>
+              <a href="assets/pdf/jobs/Mechanic-12_5_15.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Mechanic – Houston Facility</h4></a>
+                <p>The Mechanic is responsible for the repair and maintenance of StoneAge rental equipment and customer owned products. This position reports to the local site Operations Manager.</p>
+            </li>
+            <li>
+              <a href="assets/pdf/jobs/machinist-3_201512.pdf" target="_blank"><h4><i class="fa fa-arrow-circle-right"></i> Machinist III</h4></a>
+                <p>This position is responsible for the machining required by work orders, including but not limited to set up, production, and inspection of all machining and/or shop assembly jobs assigned by the Machine Shop Supervisor.</p>
             </li>
           </ul>
         </div>
