--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -170,7 +170,7 @@
           <h3>Product Support</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="#">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
@@ -213,7 +213,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="#">Trademarks</a> | <a href="#">Terms</a>
+        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
