--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -71,7 +71,7 @@
 
   <div class="fluid-container landing-nav">
     <div class="container">
-      <h2>Patent Information</h2>
+      <h1 class="page-heading">Patent Information</h1>
     </div>
   </div>
   
@@ -89,7 +89,7 @@
         </div>
       </div>
     </div>
-    <table class="table info-table table-striped table-bordered">
+    <table class="table info-table table-striped table-bordered table-condensed">
       <thead>
         <tr>
           <th>US Patent Number</th>
@@ -238,7 +238,7 @@
           <h3>Product Support</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="#">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
@@ -281,7 +281,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="#">Trademarks</a> | <a href="#">Terms</a>
+        <p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
