--- a/waterblast-automation/gearhead-tote-cleaner.html
+++ b/waterblast-automation/gearhead-tote-cleaner.html
@@ -302,7 +302,7 @@ The StoneAge Gearhead Tote Cleaner is ideal for cleaning the inner walls of pain
           <h3>Product Support</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="#">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
           <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
@@ -345,7 +345,7 @@ The StoneAge Gearhead Tote Cleaner is ideal for cleaning the inner walls of pain
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="#">Trademarks</a> | <a href="#">Terms</a>
+        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> |<p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a> </p>|<p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a> </p>
         </p>
       </div>
       <div class="col-md-1">
