footer link fixes

--- a/stoneage-trademark-list.html
+++ b/stoneage-trademark-list.html
@@ -71,7 +71,7 @@
 
   <div class="fluid-container landing-nav">
     <div class="container">
-      <h1 class="page-heading">Patent Information</h1>
+      <h1 class="page-heading">StoneAge Trademark List</h1>
     </div>
   </div>
   
