--- a/rotary-waterblast-tools/backout-prevention.html
+++ b/rotary-waterblast-tools/backout-prevention.html
@@ -171,7 +171,7 @@
                         <th>Pipe Size</th>
                         <td>2–6 in.</td>
                         <td><span class="metric">51–150 mm</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Hose OD</th>
                         <td>0.3–0.7 in.</td>
@@ -197,7 +197,7 @@
                         <th>Pipe Size</th>
                         <td>4–8 in.</td>
                         <td><span class="metric">100–200 mm</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Hose OD</th>
                         <td>0.3–1.5 in.</td>
@@ -222,7 +222,7 @@
                         <th>Pipe Size</th>
                         <td>5–17 in.</td>
                         <td><span class="metric">130–430 mm</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Hose OD</th>
                         <td>0.3–1.5 in.</td>
@@ -247,7 +247,7 @@
                         <th>Pipe Size</th>
                         <td>15–36 in.</td>
                         <td><span class="metric">380–910 mm</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Hose OD</th>
                         <td colspan="2">N/A</span></td>
@@ -271,7 +271,7 @@
                         <th>Pipe Size</th>
                         <td>8–36 in.</td>
                         <td><span class="metric">130–910 mm</span
-                      </tr>
+                      ></tr>
                       <tr>
                         <th>Hose OD</th>
                         <td colspan="2">N/A</span></td>
@@ -442,11 +442,11 @@
           <h3>Product Support</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../technical-reference.html">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../service-repairs-returns.html">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../safety-information.html">Safety Information</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../custom-waterblast-solutions.html">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
@@ -455,10 +455,10 @@
           <h3>About StoneAge</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="about-stoneage.html">Our Story</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="careers.html">Careers</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="press.html">Press</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="contact.html">Contact</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../about-stoneage.html">Our Story</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../careers.html">Careers</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../press.html">Press</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../contact.html">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
@@ -476,7 +476,7 @@
       </div>
 
       <div class="col-sm-3">
-        <a href="index.html"><img class="footer-logo" src="../assets/img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
+        <a href="../index.html"><img class="footer-logo" src="../assets/img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
       </div>
 
     </div>
@@ -485,7 +485,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> |<p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a> </p>|<p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a> </p>
+        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../stoneage-trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
