--- a/waterblast-automation/navigator-hose-drive.html
+++ b/waterblast-automation/navigator-hose-drive.html
@@ -349,11 +349,11 @@
           <h3>Product Support</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../technical-reference.html">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../service-repairs-returns.html">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../safety-information.html">Safety Information</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../custom-waterblast-solutions.html">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
@@ -362,10 +362,10 @@
           <h3>About StoneAge</h3>
         </div>
         <ul class="list-unstyled link-list">
-          <li><a href="about-stoneage.html">Our Story</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="careers.html">Careers</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="press.html">Press</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="contact.html">Contact</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../about-stoneage.html">Our Story</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../careers.html">Careers</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../press.html">Press</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="../contact.html">Contact</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
@@ -383,7 +383,7 @@
       </div>
 
       <div class="col-sm-3">
-        <a href="index.html"><img class="footer-logo" src="../assets/img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
+        <a href="../index.html"><img class="footer-logo" src="../assets/img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
       </div>
 
     </div>
@@ -392,7 +392,7 @@
   <div class="fluid-container copyright">
     <div class="container">
       <div class="col-md-11">
-        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> |<p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a> </p>|<p>2015 &copy; All Rights Reserved. <a href="stoneage-patents.html">Patents</a> | <a href="stoneage-trademark-list.html">Trademarks</a> | <a href="terms.html">Terms</a> </p>
+        <p>2015 &copy; All Rights Reserved. <a href="../stoneage-patents.html">Patents</a> | <a href="../stoneage-trademark-list.html">Trademarks</a> | <a href="../terms.html">Terms</a>
         </p>
       </div>
       <div class="col-md-1">
