--- a/about-stoneage.html
+++ b/about-stoneage.html
@@ -87,9 +87,9 @@
       <a href="waterblast-automation/autobox-abx-2l.html"><img src="assets/img/product/abx-2l-04.jpg" class="img-responsive"></a>
       <div class="padding-tb-60 padding-left-60">
         <p class="point"><span>Need help with a job?</span><br/>
-        <a href="#">Contact Our Team of Experts</a></p>
+        <a href="contact.html">Contact Our Team of Experts</a></p>
         <p class="point"><span>Want to work with us?</span><br/>
-        <a href="#">Check our career postings</a></p>
+        <a href="careers.html">Check our career postings</a></p>
       </div>
     </aside>
   </section>
@@ -150,10 +150,10 @@
         </div>
         <ul class="list-unstyled link-list">
           <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="technical-reference.html">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="service-repairs-returns.html">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="safety-information.html">Safety Information</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="custom-waterblast-solutions.html">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
