--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,16 @@
   <!-- End Nav -->
   
   <!-- Contact Main -->
-   <section id="contact">
-      <div id="map-canvas"></div>
+  <section id="contact">
+    <!-- Google Map -->
+    <div id="map-canvas"></div>
+    
+    <div class="fluid-container landing-nav margin-bottom-30">
+      <div class="container">
+        <h1 class="page-heading">Call Us +1 (970) 259-2869 &nbsp;|&nbsp; US Toll Free (866) 795-1586</h1>
+        </div>
+      </div>
+    </div>
      
       <!-- Nav tabs -->
       <div class="contact-nav container">
@@ -1730,10 +1738,10 @@ Finland</a></li>
         </div>
         <ul class="list-unstyled link-list">
           <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="technical-reference.html">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="service-repairs-returns.html">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="safety-information.html">Safety Information</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="custom-waterblast-solutions.html">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
@@ -1777,7 +1785,7 @@ Finland</a></li>
       </div>
       <div class="col-md-1">
         <a href="#top" title="To Top">
-          <span class="glyphicon glyphicon-chevron-up"></span>
+          <i class="fa fa-caret-up"></i>
         </a>
       </div>
     </div>
