--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
       </div>
       <aside class="col-sm-3 offset-sm-1 padding-tb-30 cta">
         <p class="point"><span>Need help with a job?</span><br/>
-        <a href="#">Contact Our Team of Experts</a></p>
+        <a href="contact.html">Contact Our Team of Experts</a></p>
         <p class="point late"><span>Want to know more about us?</span><br/>
-        <a href="#">Read About Our Company</a></p>
+        <a href="about-stoneage.html">Read About Our Company</a></p>
       </aside>
     </div>
   </section>
@@ -206,7 +206,7 @@
               <img class="img-thumbnail" src="assets/img/thumb/btc.jpg" alt="Boiler Tube Cleaner">
               <a class="btn" href="waterblast-automation/boiler-tube-cleaner.html">read more +</a>
               <div class="caption">
-                <h4><a href="#">Boiler Tube Cleaner</a></h4>
+                <h4><a href="waterblast-automation/boiler-tube-cleaner.html">Boiler Tube Cleaner</a></h4>
                 <p>Automated package boiler tube cleaning</p>
               </div>
             </div>
@@ -354,10 +354,10 @@ The products we purchase are of the highest specification from a technical, qual
         </div>
         <ul class="list-unstyled link-list">
           <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="technical-reference.html">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="service-repairs-returns.html">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="safety-information.html">Safety Information</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="custom-waterblast-solutions.html">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
