--- a/service-repairs-returns.html
+++ b/service-repairs-returns.html
@@ -106,7 +106,7 @@
           <li><a href="technical-reference.html">Technical Reference</a></li>
           <li><a href="service-repairs-returns.html">Service &amp; Repairs</a></li>
           <li><a href="safety-information.html">Safety Information</a></li>
-          <li><a href="custom-solutions.html">Custom Solutions</a></li>
+          <li><a href="custom-waterblast-solutions.html">Custom Solutions</a></li>
         </ul>
       </aside>
       
@@ -132,10 +132,10 @@
         </div>
         <ul class="list-unstyled link-list">
           <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="technical-reference.html">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="service-repairs-returns.html">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="safety-information.html">Safety Information</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="custom-waterblast-solutions.html">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
