--- a/stoneage-trademark-list.html
+++ b/stoneage-trademark-list.html
@@ -71,7 +71,7 @@
 
   <div class="fluid-container landing-nav">
     <div class="container">
-      <h1 class="page-heading">StoneAge Trademark List</h1>
+      <h1 class="page-heading">Patent Information</h1>
     </div>
   </div>
   
@@ -643,10 +643,10 @@
         </div>
         <ul class="list-unstyled link-list">
           <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="technical-reference.html">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="service-repairs-returns.html">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="safety-information.html">Safety Information</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="custom-waterblast-solutions.html">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
