--- a/terms.html
+++ b/terms.html
@@ -269,10 +269,10 @@ Disputes</a></li>
         </div>
         <ul class="list-unstyled link-list">
           <li><a href="product-catalogs.html">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="#">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="technical-reference.html">Technical Reference</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="service-repairs-returns.html">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="safety-information.html">Safety Information</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="custom-waterblast-solutions.html">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
         </ul>
       </div>
 
