--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,7 @@
     <div class="fluid-container landing-nav margin-bottom-30">
       <div class="container">
         <h1 class="page-heading">Call Us +1 (970) 259-2869 &nbsp;|&nbsp; US Toll Free (866) 795-1586</h1>
+        <h3 class="small">OUR SUPPORT TEAM IS HERE TO HELP. WE GLADLY RESPOND TO INQUIRIES AND PROVIDE ADVICE ON YOUR WATERBLAST CHALLENGES.</h3>
         </div>
       </div>
     </div>
@@ -98,17 +99,26 @@
             <div class="row">
               <div class="col-sm-4 contact-method">
                 <h2>
-                <i class="fa fa-phone"></i><br/>Call Us</h2>
-                <p>+1 970 259-2869<br/>
-                1 866 795-1586 <small>US Toll Free</small></p>
-                <p class="thin">OUR SUPPORT TEAM IS HERE TO HELP. WE WILL GLADLY RESPOND TO YOUR INQUIRIES AND PROVIDE ADVICE ON YOUR WATERBLAST CHALLENGES.
-                </p>
-                <p class="margin-bottom-30">
-                  <small>Monday to Friday:<br/>8am - 5pm MST</small>
-                </p>
+                <i class="fa fa-map-marker"></i><br/>Locations</h2>
+                <hr>
+                <h3>Durango Headquarters</h3>
+                <address>
+                  466 South Skylane Drive <br>
+                  Durango, CO 81303 <br><br>
+                  +1 970 259 2869 <br>
+                  <a href="mailto:sales@stoneagetools.com" class="">sales@stoneagetools.com</a>
+                </address>
+                <hr>
+                <h3>Houston Area Office</h3>
+                <address>
+                  466 South Skylane Drive <br>
+                  Durango, CO 81303 <br><br>
+                  +1 970 259 2869 <br>
+                  <a href="mailto:sales@stoneagetools.com" class="">sales@stoneagetools.com</a>
+                </address>
               </div>
               <div class="col-sm-4 contact-method">
-                <h2><i class="fa fa-envelope-o"></i><br/>Email Us</h2>
+                <h2><i class="fa fa-paper-plane"></i><br/>Email Us</h2>
                 <form method="post" action="contact.php" name="contactform" id="contactform">
                   <fieldset>
                     <input name="name" type="text" id="name" class="form-control" size="30" placeholder="Name">
